--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,17 +10,17 @@ environment:
   sdk: '>=3.3.4 <4.0.0'
 
 dependencies:
+  cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
-
   flutter_native_splash: ^2.4.0
-  cupertino_icons: ^1.0.6
+  google_fonts: ^6.2.1
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   flutter_lints: ^3.0.0
+  flutter_test:
+    sdk: flutter
 
 flutter:
 
@@ -28,8 +28,6 @@ flutter:
 
   assets:
     - assets/icons/
-
-
   # fonts:
   #   - family: Schyler
   #     fonts:
@@ -41,9 +39,6 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-
-
-
 flutter_native_splash:
   android: true
   ios: false
