--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/icons/logo.png
     - assets/icons/
   # fonts:
   #   - family: Schyler
