--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.4.0
+  flutter_slidable: ^3.1.0
   google_fonts: ^6.2.1
   shared_preferences: ^2.2.3
 
