--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: takenote
-description: "A new Flutter project."
+description: "Takenote"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -16,6 +16,9 @@ dependencies:
   flutter_slidable: ^3.1.0
   google_fonts: ^6.2.1
   shared_preferences: ^2.2.3
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
@@ -31,7 +34,7 @@ flutter_icons:
 
 
 flutter:
-
+  generate: true
   uses-material-design: true
 
   assets:
